Update nav bar to fixed position. Update header styling, margin to prevent navbar overlap.

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
 .main-header {
   height: 400px;
   width: 100%;
+  margin-top: 120px;
   color: white;
   background-color: #757ea1;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
